# cranebot3-firmware

./: .coverage  .dockerignore  .gitattributes  .gitignore  MANIFEST.in  README.md  Stringman.spec  anchor_pose_0.npz  anchor_pose_1.npz  anchor_pose_2.npz  anchor_server.py  anchor_server_test.py  arp_gripper_state.json  calibration.py  calibration_data.npz  charc.py  collected_cal_data.pickle  component_server.py  config.py  config_loader.py  configuration.json  configuration_manual.json  connect_wifi.py  cont.npz  cv_common.py  data_store.py  dataset_collector.py  debug_motor.py  debug_solids_0.stl  debug_solids_1.stl  debug_solids_2.stl  debug_solids_3.stl  fast_vid_reader.py  frequency_estimator.py  gant_pos.npy  geometry_tests.py  grip_estimator.py  gripper_arp_server.py  gripper_server.py  imx500_segmentation.py  (+42 more)
anchor/: detect_aruco.py  motor_control.py  spools.py
anchor-sketch/: anchor-sketch.ino  httpd.cpp
assets/: anchor.blend  arrow.blend  camera_rotation.blend  camera_rotation.blend1  gamepad.xcf  gantry.blend  gripper_body.blend  gripper_closed.blend  gripper_finger.blend  indicator.blend  map_marker.blend  shell_with_code.blend
blender/: simulation-test.blend
colored_shells/: back_shell_with_all_codes.stl  back_shell_with_code.stl  front_shell_with_all_codes.stl  front_shell_with_code.stl  shell_with_code.blend  shell_with_code_back.stl  shell_with_code_back2.stl  shell_with_code_front.stl  shell_with_four_codes.blend  shells.3mf
design_resources/: brainstorming.txt  configuration backup.json  proposed_monorepo.txt
docs/: notes_on_pick_and_place.md  video_data_flow.md
experiments/: Damaio_setup.md  anchor_height_diagnosis.py  cam_cal.py  cap_from_stream.py  capture_from_vid.py  component_temps_10fps.json  component_temps_20fps.json  component_temps_30fps.json  component_temps_plot.html  ddsm115.py  deploy_ssh_keys.py  diamond.py  divided_viewport.py  dm_h6215.py  estimate_single_aruco.py  example_async_chunked_stream.cpp  fix_dataset.py  frame_ipc.py  frequency_estimator.py  frequency_estimator_online.py  gripper_page.html  gripping_procedure.py  imx500_segmentation.py  integration_test.py  kalman_demonstration.py  lerobot_resize_video_feature.py  lerobot_train_modal.py  local_cam.py  measure_dts_zero_point.py  mjpegtest.py  mock_rpicam_vid.py  opencv_experimenting.py  pool_experiment.py  printqrcode.py  qr_code_read.py  quat.npy  reach_tension_level.py  resnet_centering.py  robot_simulator.py  rpi_trainer_connection_example.py  (+9 more)
firebeetle/: README.md  firebeetle_anchor_client.py
gripper-sketch/: app_httpd.cpp  gripper-sketch.ino  httpd.cpp
gripper_spots_data/: README.md
host/: anchor_mapping.txt  brainstorming.txt  bspline_shift.py  calibration.py  capture_from_vid.py  connect_and_stream_from_service.py  connect_service.py  cv_common.py  data_store.py  detect_board_test.py  firebeetle_anchor_client.py  generate_board_images.py  main.py  make_boards.py  observer.py  observer_test_client.py  opencv_experimenting.py  position_estimator.py  raspi_anchor_client.py  read_all_cams.py  requirements.txt  test_server.py  ursina_app.py  zeroconf_discover.py
local_ui/: .gitignore  README.md  main.py  requirements.txt  ursina_app.py  ursina_entities.py
models_compressed/: anchor.bam  anchor.mtl  arrow.bam  arrow.mtl  gantry.bam  gantry.mtl  gripper_body.bam  gripper_body.mtl  gripper_closed.bam  gripper_finger.bam  gripper_finger.mtl  indicator.bam  indicator.mtl  map_marker.bam  map_marker.mtl  sphere.mtl
playroom-ui/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
protos/: README.md  common.proto  control.proto  robot-config.proto  robot_control_service.proto  telemetry.proto
qa/: anchor_eval.py  gripper_arp_eval.py  gripper_eval.py  windup.py
raspi-anchor/: README.md  anchor_server.py  detect_aruco.py  motor_control.py  requirements.txt  spools.py  start_stream.sh  stop.py
scripts/: build_release.sh  install_pi.sh
stringman-pilot-rpi-image/: README.md  can-init.sh  can-setup.service  config.txt  config.yaml  cranebot.service  preconfigured-wifi.nmconnection  preconfigured.nmconnection  resize-rootfs.service  resize-rootfs.sh  setup.sh  wifi-thermal-watchdog.service  wifi_thermal_watchdog.py
tests/: anchor_arp_server_test.py  anchor_client_test.py  anchor_server_test.py  arp_anchor_client_test.py  calibration_test.py  collected_cal_data.pickle  configuration.json  conftest.py  cv_common_test.py  datastore_test.py  gripper_arp_server_test.py  gripper_client_test.py  gripper_server_test.py  integration_test.py  mock_rpicam_vid.py  observer_connection_test.py  observer_integration_test.py  observer_test.py  out.txt  pose_functions_test.py  position_estimator_test.py  pull_logs_test.py  requirements_testing.txt  spool_dm_test.py  spools_test.py  stringman_lerobot_test.py  sync_timezone_test.py  target_queue_test.py  video_streamer_test.py
trainer/: __init__.py  bt_uart_trainer_service.cpp  centering.py  centering_eval.py  centering_labler.py  centering_train.py  click_collector.py  control_service.py  (+31 more)
(+162 files in other folders)
