[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nf_robot"
# versioning rules
# major when making incompatible API changes,
# minor when adding functionality in a backwards-compatible manner, and
# patch, when making backwards-compatible bug fixes.
version = "4.4.0"
description = "Robot control system for Stringman"
authors = [{name = "Nathaniel Nifong", email = "naavox@gmail.com"}]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache 2.0"}

dependencies = [
    "numpy>=2.0",
    "zeroconf==0.148.0",
    "asyncio",
    "websockets",
    "betterproto2==0.9.0",
    "opencv-contrib-python-headless>=4.0",
]

[project.optional-dependencies]
host = [
    "scipy",
    "torch>=2.4.0",
    "torchvision",
    "pupil-apriltags",
    "av",
    "huggingface_hub",
    "tzlocal",
]
dev = [
    "pytest",
    "pytest-cov",
    "grpcio-tools",
    "betterproto2_compiler==0.9.0",
    "lerobot[dataset,multi_task_dit,transformers_dep,vla_jepa]==0.6.0", # these guys can't be trusted not to break things
    "build",
    "twine",
]
pi = [
    "pyserial",
    "getmac",
    "gpiodevice",
    "Adafruit-Blinka",
    "adafruit-circuitpython-vl53l1x",
    "adafruit-circuitpython-ads1x15",
    "adafruit-circuitpython-mpu6050",
    "pyzbar",
    "damiao-motor",
]

[project.scripts]
# Main Applications
component-server = "nf_robot.robot.i2c_dispatcher:main"
stringman-headless = "nf_robot.host.observer:main"

# QA Tools
qa-gripper-arp = "nf_robot.qa.gripper_arp_eval:main"
qa-anchor-arp = "nf_robot.qa.anchor_arp_eval:main"

[tool.setuptools.package-data]
"nf_robot.scripts" = ["*.sh"]
"nf_robot.protos" = ["protos/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "pi: marks tests that require Raspberry Pi hardware or Linux-specific GPIO libraries"
]